// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`module exports > bundled export (bundled.ts) > should have the expected shape 1`] = `
[
  "ClerkJS",
  "__brand",
  "version",
]
`;

exports[`module exports > server export (server.ts) > should have the expected shape 1`] = `
[
  "__brand",
  "version",
]
`;
